src/styles/NavBar.css
.NavBar {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    background-color: white;
    box-sizing: border-box;
    z-index: 5;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
}

.Navbar__full-width-banner{
    height: 2rem;
    width: 800rem;
    background-color: var(--lightgrey);
    border-top: 1px solid var(--grey);
    border-bottom: 1px solid var(--grey);
    position: fixed;
    top: 3.5rem;
    left: 0;
    z-index: -1;
}

.info-container{
    height: 3.5rem;
    display: flex;
    box-sizing: border-box;
    justify-content: space-between;
    align-items: center;
    padding: 0.6em;
}

.info-container--left{
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 50%;
    max-width: 25rem;
}

.info-container--right{
    display: flex;
    align-items: center;
    justify-content: space-around;
    width: 40%;
    max-width: 18rem;
}

.info-container__question{
    font-size: 0.9rem;
    font-weight: 500;
}

@media only screen and (max-width: 770px) {
    .info-container--right{
        width: 25%;
    }

    .info-container__question {
        display: none;
    }
  }

.info-container__button{
    height: 2rem;
    width: 8rem;
    font-size: 0.9rem;
    font-weight: 600;
    color: white;
    background-color: black;
    border-radius: 0.2rem;
}

@media only screen and (max-width: 770px) {
    .info-container__button{
        font-size: 0.8rem;
    }
  }

.info-container__button:hover{
    background-color: rgb(95, 95, 86);
    cursor: pointer;
}

.info-container__link{
    color: black;
    text-decoration: none;
    font-weight: 400;
    padding: 0.5rem;
    border-radius: 0.2rem;
}

.info-container__link:hover{
    color: var(--highlight);
    background-color: var(--highlight-bg)
}

@media only screen and (max-width: 580px) {
    .info-container__link {
      display: none;
    }
  }

.logo{
    display: flex;
    justify-content: space-around;
    width: 10rem;
}

.logo__text--blue{
    color: rgb(62, 140, 204);
    font-style: italic;
    font-size: 2rem;
    font-weight: 400;
    margin: 0rem;
}

.logo__text--black{
    font-style: normal;
    font-weight: 500;
    align-self: center;
    font-size: 1rem;
}

.path-container{
    height: 2rem;
    background-color: var(--lightgrey);
    border-top: 1px solid var(--grey);
    border-bottom: 1px solid var(--grey);
    display: flex;
    justify-content: space-between;
    padding: 0rem 0.6rem;
}

.path-separater{
    display: flex;
}

.path-container__path {
    margin: 0.4rem;
    font-weight: 300;
    white-space: pre-wrap;
}

@media only screen and (max-width: 340px) {
    .path-container__path{
        font-size: 0.8rem;
    }
  }

@media only screen and (max-width: 910px) {
    .path-container__path--hidable{
        display: none;
    }
  }


.path-container__language{
    font-size: 0.9rem;
    font-weight: 400;
    margin: 0.4rem;
    width: 10rem;
}

@media only screen and (max-width: 600px) {
    .path-container__language {
        display: none;
    }
  }

  
.Navbar__hamburger {
    display: none;
}

.hamburger-menu--hidden{
    display: none;
}

.hamburger-menu{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.hamburger__link{
    color: black;
    text-decoration: none;
    font-weight: 400;
    padding: 0.5rem;
    border-radius: 0.2rem;
}

.hamburger__link:hover{
    color: var(--highlight);
    background-color: var(--highlight-bg)
}

@media only screen and (max-width: 770px) {
    .info-container--right{
        display: none;
    }

    .info-container__link {
        display: none;
    }

    .Navbar__hamburger {
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 1.2rem;
        height: 2rem;
        width: 2rem;
        margin-right: 1rem;
        background-color: white;
        border: none;
        border-radius: 4px;

    }

    .Navbar__hamburger:hover {
       background-color: var(--grey);
    }

    .Navbar__full-width-banner{
        display: none;
    }

  }

  .path-container__SideBar-icon{
    display: none;
  }

  @media only screen and (max-width: 910px) {
    .path-container__SideBar-icon{
        all: unset;
        height: 100%;
        width: 1.8rem;
        border-right: 1px solid var(--grey);
        display: flex;
        align-items: center;
        justify-content: center;
      }

      .path-container__SideBar-icon:hover{
        background-color: var(--grey);
      }

      .path-container{
        padding-left: 0rem;
      }

  }

